[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Habit.gd" type="Script" id=2]
[ext_resource path="res://assets/habitIcons/points_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/habitIcons/store_icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Habit" type="Node2D"]
script = ExtResource( 2 )

[node name="PriceNumber" type="Label" parent="."]
margin_left = 579.25
margin_top = 307.25
margin_right = 619.25
margin_bottom = 332.25
theme = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsIcon" type="Sprite" parent="."]
position = Vector2( 557.25, 320.25 )
scale = Vector2( 0.0595703, 0.0595703 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 521.0
margin_top = 189.0
margin_right = 633.0
margin_bottom = 295.0
disabled = true
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
